--- a/templates/accounts/account/email_confirmed.html
+++ b/templates/accounts/account/email_confirmed.html
@@ -7,18 +7,15 @@
 
 
 {% block content %}
-    <div class="row">
-        <div class="col-lg-12 col-md-12 col-sm-12">
-            <div class="col-lg-4 col-md-4 col-sm-1"></div>
-            <div class="col-lg-4">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h3>{% trans "Confirm E-mail Address" %}</h3>
-                    </div>
-                    <div class="panel-body">
-                        {% user_display confirmation.email_address.user as user_display %}
-                        <p>{% blocktrans with confirmation.email_address.email as email %}You have confirmed that <a href="mailto:{{email}}">{{ email }}</a> is an e-mail address for user {{ user_display }}.{% endblocktrans %}</p>
-                    </div>
+    <div class="row justify-content-center py-5">
+        <div class="col-lg-4">
+            <div class="card">
+                <div class="card-header"><h4>{% trans "Confirm E-mail Address" %}</h4></div>
+                <div class="card-body p-5">
+                    {% user_display confirmation.email_address.user as user_display %}
+                    <p>{% blocktrans with confirmation.email_address.email as email %}You have confirmed that
+                        <a href="mailto:{{ email }}">{{ email }}</a> is an e-mail address for user {{ user_display }}
+                        .{% endblocktrans %}</p>
                 </div>
             </div>
         </div>
