--- a/templates/accounts/account/verification_sent.html
+++ b/templates/accounts/account/verification_sent.html
@@ -7,18 +7,18 @@
 {% block content %}
     <div class="row justify-content-center py-5">
         <div class="col-lg-4">
-            <div class="card panel-default">
+            <div class="card">
                 <form action="{% url 'account_email' %}" class="email_list" method="post">
                 {% csrf_token %}
                     <div class="card-header"><h4>{% trans "Verify Your E-mail Address" %}</h4></div>
-                    <div class="card-body">
+                    <div class="card-body p-5">
                         <p>{% blocktrans %}We have sent an e-mail to you for verification. Follow the link provided to finalize the signup process.{% endblocktrans %}</p>
                         <p>If you do not receive the e-mail within a few minutes, check your spam folder. Registration confirmation e-mails are often flagged as potential spam.</p>
                         <hr/>
                         <strong>E-mail hasn't arrived and isn't in your spam folder?</strong>
                         <p>If you <b><a href="{% url 'account_login' %}">attempt to sign in</a></b> using the password
                             you specified when registering, your verification email will be re-sent.</p>
-                        <p><b>Please Note:</b> Verification e-mails will only be sent once every three (3) minutes. Additional
+                        <p><b>Please Note:</b> Verification e-mails will only be sent once every 3 minutes. Additional
                             attempts to log in to send the message more frequently than this will not result in additional
                             e-mails.</p>
                         <p>If the verification e-mail still doesn't come through, <b><a href="mailto:support@canceridc.dev">contact us</a></b>
