--- a/templates/donors/clinical_search_facility_result.html
+++ b/templates/donors/clinical_search_facility_result.html
@@ -53,7 +53,8 @@
                             </button>
                         </div>
                         <div class="text-end">
-                            <div id="save_message" class="text-primary fw-bold mt-1"></div>
+                            <div id="save_message" class="text-primary fw-bold my-2"></div>
+                            <div id="alert_message" class="text-primary my-2"></div>
                         </div>
                     </form>
                 </div>
