--- a/templates/donors/driver_search_facility.html
+++ b/templates/donors/driver_search_facility.html
@@ -187,7 +187,8 @@
                             </div>
                         </div>
                         <div class="text-end mb-3">
-                            <div id="save_message" class="text-primary fw-bold ms-2"></div>
+                            <div id="save_message" class="text-primary fw-bold my-2"></div>
+                            <div id="alert_message" class="text-primary my-2"></div>
                         </div>
                     </form>
                 </div>
