--- a/templates/donors/search_tissue_samples.html
+++ b/templates/donors/search_tissue_samples.html
@@ -398,6 +398,7 @@
                         <div class="row">
                             <div class="text-end mb-3">
                                 <div id="save_message" class="text-primary fw-bold ms-2"></div>
+                                <div id="alert_message" class="text-primary ms-2"></div>
                             </div>
                         </div>
                     </div>
