--- a/templates/ctb/bibliography.html
+++ b/templates/ctb/bibliography.html
@@ -319,7 +319,7 @@
                             </div>
                             <div class="mt-3"><a class="fw-bold" href="https://www.nature.com/articles/bjc2013574">Iodine-131
                                 dose-dependent gene
-                                expression: alterations in both normal and tumour thyroid tissues of post-Chernobyl
+                                expression: alterations in both normal and tumor thyroid tissues of post-Chernobyl
                                 thyroid cancers.</a><br><span>Abend M, Pfeiffer RM, Ruf C, Hatch M, Bogdanova TI, Tronko MD, Hartmann J, Meineke V, Mabuchi K, Brenner AV.</span><br><span>Br J Cancer.&nbsp;</span><strong>2013</strong><span>&nbsp;Oct 15;109(8):2286-94. doi: 10.1038/bjc.2013.574. Epub 2013 Sep 17&nbsp;</span>
                             </div>
                             <hr>
