--- a/templates/ctb/contact.html
+++ b/templates/ctb/contact.html
@@ -27,23 +27,19 @@
         <div class="row justify-content-center">
             <div class="col-lg-5">
                 <div class="card mt-3">
-                    <div class="card-header py-2 px-5"><h5>Professor Geraldine Thomas</h5>
-                        <div class="card-subtitle text-muted"><strong>CTB Project Director</strong>
+                    <div class="card-header py-2 px-5"><h5>Stephen J. Chanock, M.D.</h5>
+                        <div class="card-subtitle text-muted"><strong>Director</strong>
                         </div>
                     </div>
                     <div class="card-body py-2 px-5">
                         <p class="card-text">
-                            Department of Surgery and Cancer<br>
-                            Imperial College London<br>
-                            Room 11L05<br>
-                            Charing Cross Hospital<br>
-                            Fulham Palace Road<br>
-                            London W6 8RF
+                            Division of Cancer Epidemiology & Genetics<br>
+                            NCI Shady Grove | Room 7E412<br>
                         </p>
 
-                        <div class="text-muted">Email: <a href="mailto:chernobyltissuebank@imperial.ac.uk">chernobyltissuebank@imperial.ac.uk</a>
+                        <div class="text-muted">Email: <a href="mailto:ctb-info@isb-cgc.org">ctb-info@isb-cgc.org</a>
                         </div>
-                        <div class="text-muted">Phone: <a href="tel:+44-203-311-7342">+44 (0)203 311 7342</a>
+                        <div class="text-muted">Phone: <a href="tel:+44-203-311-7342">240-276-7150 </a>
                         </div>
                     </div>
                 </div>
