--- a/templates/ctb/fact_sheet.html
+++ b/templates/ctb/fact_sheet.html
@@ -64,7 +64,7 @@
     <ol>
         <li>Ensure that specimens of thyroid cancer operated on or after 1<sup>st</sup> October 1998 (the
             start date of the project) are consistently described and sampled, and that the materials
-            (extracted tumour and normal DNA/RNA and blood samples and in some cases fixed tissue sections)
+            (extracted tumor and normal DNA/RNA and blood samples and in some cases fixed tissue sections)
             together with the relevant information, are available for appropriate research studies.
         </li>
         <li>Provide a diagnosis agreed by an international committee of pathologists for all cases in the
