--- a/templates/ctb/landing.html
+++ b/templates/ctb/landing.html
@@ -42,7 +42,7 @@
                 <div>
                     The CTB is a research tissue bank that was established to collect, document, store, and issue to
                     bona
-                    fide researchers, biological samples donated by patients with thyroid tumours who live in the areas
+                    fide researchers, biological samples donated by patients with thyroid tumors who live in the areas
                     of
                     Ukraine and Russia close to the site of the Chernobyl Nuclear Power Plant.
                 </div>
