--- a/templates/ctb/material_available.html
+++ b/templates/ctb/material_available.html
@@ -38,7 +38,7 @@
         cancer (returning to pre-accident levels) in those who were born after 1/1/87 and were therefore not
         exposed to radioiodine either in utero (the thyroid concentrates iodine from 3 months of
         intrauterine age) or in childhood. The cohort now includes a significant number of cases of thyroid
-        tumours from patients who are resident in the areas&nbsp; contaminated by fallout from Chernobyl,
+        tumors from patients who are resident in the areas&nbsp; contaminated by fallout from Chernobyl,
         but by virtue of the fact that they were born after 1/1/87 have not been exposed to radioiodine.&nbsp;
         This is an extremely valuable cohort that serves as a control population for thyroid cancer
         associated with radioiodine exposure.</p>
@@ -46,10 +46,10 @@
         thyroid cancer or adenoma in the Institute of Endocrinology and Metabolism in Kiev, Ukraine and the
         A. Tsyb Medical Radiological Research Centre in Obninsk, Russian Federation who consent to donate to
         the project. Tissue is collected to an approved standard operating procedure (SOP) and is snap
-        frozen; the presence or absence of tumour is verified by frozen section. A representative paraffin
+        frozen; the presence or absence of tumor is verified by frozen section. A representative paraffin
         block is also obtained for each case. Where appropriate, we also collect fresh and paraffin-embedded
         tissue from loco-regional metastases.</p>
-    <p>Histological slides from all tumours are reviewed by the CTB Pathology Panel - an international group
+    <p>Histological slides from all tumors are reviewed by the CTB Pathology Panel - an international group
         of expert thyroid pathologists, and a consensus diagnosis agreed before any materials are released
         to researchers.</p>
     <p>The CTB provides materials and data to research groups worldwide. The aim of the project is to ensure
@@ -122,7 +122,7 @@
             <td>(798)</td>
         </tr>
         <tr>
-            <td>Other Benign Follicular Tumours<br>(FT UMP and WDT UMP)</td>
+            <td>Other Benign Follicular Tumors<br>(FT UMP and WDT UMP)</td>
             <td>143</td>
             <td>(124)</td>
             <td>77</td>
@@ -131,7 +131,7 @@
             <td>(183)</td>
         </tr>
         <tr>
-            <td>Miscellaneous Thyroid Tumours&nbsp;<br>(Other and Nodule, TTT)</td>
+            <td>Miscellaneous Thyroid Tumors&nbsp;<br>(Other and Nodule, TTT)</td>
             <td>158</td>
             <td>(104)</td>
             <td>115</td>
