--- a/templates/ctb/research_projects_2010_2019.html
+++ b/templates/ctb/research_projects_2010_2019.html
@@ -65,7 +65,7 @@
         for will be used in a work package of EpiRadBio that focuses on the cancer risk of papillary thyroid
         cancer. In another, recently finished EU funded project on young onset childhood thyroid carcinomas
         that also used CTB material we found that a gain of the chromosome band 7q11 was associated with
-        exposure to low-dose ionising radiation (He et al., PNAS, in press). The FFPE tumour sections from
+        exposure to low-dose ionising radiation (He et al., PNAS, in press). The FFPE tumor sections from
         patients, which are part of the UkrAm cohort and which come with estimates on radiation dose the
         patients have received will be used for validation and further characterisation of this marker. The
         FFPE sections will be used for in situ hybridisation (FISH) using 7q11 specific probes. DNA and
@@ -115,7 +115,7 @@
         using a whole proteomics approach (liquid chromatography-tandem mass spectrometry, LC-MS/MS). The
         results will be used to identify the dysregulation networks in which CLIP2 is specifically involved.
         The projects aims to validate the radiation marker on chromosome band 7q11, to identify the networks
-        that are dysregulated in tumours harbouring the marker and to find new markers that are associated
+        that are dysregulated in tumors harbouring the marker and to find new markers that are associated
         with exposure to radiation.<br><a href="#">Go to top</a></p>
     <div class="fw-bold anchor-section mt-5" id="study0042011">Project reference number:
         004/2011
@@ -172,7 +172,7 @@
         that are carry on to investigate the transcriptomic and genetic profile of radiation induced thyroid
         cancer.<br>As a first step of the study Affimetrix microarray technology was employed to define
         transcriptomic profiles in two cohorts of children matched on age, oblast and pathological type of
-        tumour. At present we want to validate the results with qPCR.<br><a
+        tumor. At present we want to validate the results with qPCR.<br><a
                 href="#">Go to top</a></p>
     <div class="fw-bold anchor-section mt-5" id="study-0012013">Project reference number 001/2013</div>
     <p>Principal
@@ -223,7 +223,7 @@
         radioiodine. Recently, rearrangements of the anaplastic lymphoma kinase (ALK) gene have been found
         to be selectively expressed in papillary thyroid cancer (PTC) amongst atomic bomb survivors (ABS),
         but not in PTC patients lacking radiation exposure. In PTC, ALK rearrangements have been shown to be
-        associated with tumour aggressiveness and, importantly, represent a possible pharmacologicaltarget
+        associated with tumor aggressiveness and, importantly, represent a possible pharmacologicaltarget
         for the compound Crizotinib. Interestingly, radiation-induced PTCs that show ALK rearrangements lack
         additional genetic alterations that are frequently found in sporadic thyroid cancer, such as RET,
         NTRK1, BRAF, or RAS; these findings underline the oncogenic potential of ALK rearrangements in
