--- a/templates/ctb/tissue-microarrays.html
+++ b/templates/ctb/tissue-microarrays.html
@@ -30,7 +30,7 @@
 
 {% block subcontent %}
     <p>To construct a tissue microarray (TMA), small core biopsies (usually about 0.6mm diameter)
-        are taken from viable, morphologically representative areas of paraffin embedded tumour tissues and
+        are taken from viable, morphologically representative areas of paraffin embedded tumor tissues and
         assembled on a recipient paraffin block.</p>
 
     <div class="text-center fw-bold">Making a Tissue Microarray</div>
