--- a/templates/ctb/useful_links.html
+++ b/templates/ctb/useful_links.html
@@ -73,7 +73,7 @@
     <h5>Why was the CTB set up?</h5>
     <p>By 1995 it was becoming apparent that several European research groups were unknowingly receiving
         material from the same patients for research, and that there were discrepancies in the pathological
-        diagnoses being applied to the same tumour. Subsequently, a <a
+        diagnoses being applied to the same tumor. Subsequently, a <a
                 href="https://core.ac.uk/download/pdf/77003549.pdf">report to the EC </a>confirmed that
         there had indeed been considerable overlap since 1995 among a number of EC-funded molecular biology
         projects. It was then recognized that a cooperative tissue bank would reduce the duplication of
