--- a/templates/donors/clinical_search_facility.html
+++ b/templates/donors/clinical_search_facility.html
@@ -102,7 +102,7 @@
                                         <label class="form-check-label" for="optype-ltotal">
                                             Less Than Total Thyroidectomy<br>
                                             <span class="text-muted fw-light">Where only the area of the thyroid gland that contains the
-                                                            tumour is removed.</span>
+                                                            tumor is removed.</span>
                                         </label>
                                     </div>
                                 </div>
@@ -136,7 +136,7 @@
                                     This is the pathological staging system used to describe the cancer. It will enable
                                     you to select samples from cancers based on size, invasion into lymph nodes and
                                     metastasis to distant organs.
-                                    In this section you can refine your biosample search for size of tumour and local
+                                    In this section you can refine your biosample search for size of tumor and local
                                     invasion using T and N status.
                                 </p>
                                 <p>
@@ -232,7 +232,7 @@
                                                     <label class="form-check-label" for="ptstatusa-t3b">
                                                         <strong>T3b</strong>: Gross extrathyroidal extension invading
                                                         only strap muscles (sternohyoid, sternothyroid, thyrohyoid or
-                                                        omohyoid muscles) from a tumour of any size
+                                                        omohyoid muscles) from a tumor of any size
                                                     </label>
                                                 </td>
                                             </tr>
@@ -251,7 +251,7 @@
                                                     <label class="form-check-label" for="ptstatusa-t4a">
                                                         <strong>T4a</strong>: Gross extrathyroidal extension invading
                                                         subcutaneous soft tissues, larynx, trachea, oesophagus or
-                                                        recurrent laryngeal nerve from a tumour of any size
+                                                        recurrent laryngeal nerve from a tumor of any size
                                                     </label>
                                                 </td>
                                             </tr>
@@ -264,13 +264,13 @@
                                                     <label class="form-check-label" for="ptstatusa-t4b">
                                                         <strong>T4b</strong>: Gross extrathyroidal extension invading
                                                         prevertebral fascia or encasing carotid artery or mediastinal
-                                                        vessels from a tumour of any size
+                                                        vessels from a tumor of any size
                                                     </label>
                                                 </td>
                                             </tr>
                                             </tbody>
                                         </table>
-                                        <div><strong>If you do not wish to select a size of tumour, please leave this
+                                        <div><strong>If you do not wish to select a size of tumor, please leave this
                                             section blank.</strong></div>
                                     </div>
                                 </div>
@@ -364,7 +364,7 @@
                                                     <label class="form-check-label" for="ptstatusb-t3b">
                                                         <strong>T3b</strong>: Gross extrathyroidal extension invading
                                                         only strap muscles (sternohyoid, sternothyroid, thyrohyoid or
-                                                        omohyoid muscles) from a tumour of any size
+                                                        omohyoid muscles) from a tumor of any size
                                                     </label>
                                                 </td>
                                             </tr>
@@ -381,7 +381,7 @@
                                                 </td>
                                                 <td class="ps-5">
                                                     <label class="form-check-label" for="ptstatusb-t4a">
-                                                        <strong>T4a</strong>: Moderately advanced disease; tumour of any
+                                                        <strong>T4a</strong>: Moderately advanced disease; tumor of any
                                                         size with gross extrathyroidal extension into the nearby tissues
                                                         of the neck, including subcutaneous soft tissue, larynx,
                                                         trachea, oesophagus or recurrent laryngeal nerve
@@ -395,7 +395,7 @@
                                                 </td>
                                                 <td class="ps-5">
                                                     <label class="form-check-label" for="ptstatusb-t4b">
-                                                        <strong>T4b</strong>: Very advanced disease; tumour of any size
+                                                        <strong>T4b</strong>: Very advanced disease; tumor of any size
                                                         with extension toward the spine or into nearby large blood
                                                         vessels, invading the prevertebral fascia or encasing the
                                                         carotid artery or mediastinal vessels
@@ -405,7 +405,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <div><strong>If you do not wish to select a size of tumour, please leave this
+                                    <div><strong>If you do not wish to select a size of tumor, please leave this
                                         section blank.</strong></div>
                                 </div>
 
@@ -509,7 +509,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <div><strong>If you do not wish to select a size of tumour, please leave this
+                                    <div><strong>If you do not wish to select a size of tumor, please leave this
                                         section blank.</strong></div>
                                 </div>
                             </fieldset>
