--- a/templates/donors/driver_search_facility.html
+++ b/templates/donors/driver_search_facility.html
@@ -33,7 +33,7 @@
                     </div>
                     <div class="py-3">
                         <p>This section of the search facility enables you to refine your search using oncogenic
-                            drivers that have been identified in tumour samples as a result of research studies
+                            drivers that have been identified in tumor samples as a result of research studies
                             using other samples from the same patients that match your search criteria. Data has
                             been pooled from three research studies, all of which have used either whole genome
                             sequencing or next generation sequencing/RNAseq.</p>
