--- a/templates/ctb/about_project.html
+++ b/templates/ctb/about_project.html
@@ -29,28 +29,25 @@
 
 {% block subcontent %}
     <p><strong>The CTB (Chernobyl Tissue Bank) is a unique venture. It is the first international
-        cooperation that seeks to establish a collection of biological samples from tumours and normal
-        tissues from patients for whom the aetiology of their disease is known - exposure to radioiodine in
+        cooperation that seeks to establish a collection of biological samples from tumors and normal
+        tissues from patients for whom the etiology of their disease is known - exposure to radioiodine in
         childhood.</strong></p>
     <p>The project, which started in October 1998, has been supported by a number of sponsors including the
         European Commission, the WHO, the National Cancer Institute (NCI) of the USA and the Sasakawa Health
-        Foundation of Japan (SHF). The project is currently jointly funded by the NCI and the SHF.</p>
-    <p>The project is coordinated from Imperial College, London and works with Institutes in the Russian
-        Federation (the Medical Radiological Research Centre in Obninsk) and Ukraine (the Institute of
-        Endocrinology and Metabolism in Kiev) to support local scientists and clinicians to manage and run a
-        tissue bank for those patients who have developed thyroid tumours following exposure to radiation
-        from the Chernobyl accident. Belarus was also initially included in the project, but is currently
-        suspended for political reasons.</p>
-    <p>The project has the full support of the Governments of the Russian Federation and Ukraine.</p>
-    <p>The large number of thyroid tumours that have occurred in areas exposed to high levels of fallout
-        from the Chernobyl accident raises important problems in the areas of public health, regulation of
-        exposure to radionuclides and in the understanding of the molecular changes involved in their
-        genesis. The over-riding priority must go to matters such as diagnosis, treatment of those affected,
-        and prevention. International Agencies have given and are giving financial and material help in
-        these areas.</p>
-    <p>However, providing the needs of the patient are not compromised, it is very important to ensure that
-        information that may be of value to the health of future generations is not lost. Although the post
-        Chernobyl thyroid tumours are associated with a particular aetiology, they may also provide clues to
-        the pathogenesis and molecular biology of thyroid carcinoma in general.</p>
+        Foundation of Japan (SHF). The project is currently jointly funded by the NCI.</p>
+    <p>The project is coordinated by the Division of Cancer Epidemiology and Genetics, National Cancer Institute (DCEG,
+        NCI) in collaboration with the Institute of Endocrinology and Metabolism in Kiev, Ukraine. It supports local
+        scientists and clinicians to manage a tissue bank for patients who have developed thyroid tumors following
+        exposure to radiation from the Chernobyl accident. Belarus was also initially included in the project but is
+        currently suspended for political reasons.</p>
+    <p>The project has the full support of the Governments of the Ukraine.</p>
+    <p>The large number of thyroid tumors that have occurred in areas exposed to high levels of fallout from the
+        Chernobyl accident raises important problems in the areas of public health, regulation of exposure to
+        radionuclides and in the understanding of the molecular changes involved in their genesis. The over-riding
+        priority must go to matters such as diagnosis, treatment of those affected, and prevention.</p>
+    <p>However, providing to the needs of the patient is not compromised and it is important to ensure that information
+        of value to the health of future generations is not lost. Although the post Chernobyl thyroid tumors are
+        associated with a particular aetiology, they may also provide clues to the pathogenesis and molecular biology of
+        thyroid carcinoma in general.</p>
 
 {% endblock %}
