--- a/templates/share/site_header.html
+++ b/templates/share/site_header.html
@@ -5,7 +5,7 @@
 
 <nav id="ctb-main-navbar" class="navbar navbar-expand-lg fixed-top navbar-dark" aria-label="Main navigation">
     <div class="container">
-        <a class="navbar-brand" href="{% url 'landing_page' %}">Chernobyl Tissue Bank</a>
+        <a class="navbar-brand" href="{% url 'landing_page' %}">Home</a>
         <button class="navbar-toggler p-0 border-0" type="button" id="navbarSideCollapse" data-bs-toggle="collapse"
                 data-bs-target="#ctb-collapsible-navbar"
                 aria-label="Toggle navigation">
@@ -42,28 +42,28 @@
                         <li><a class="dropdown-item" href="{% url 'material_available' %}">Material Available</a></li>
                     </ul>
                 </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle {% if 'resources/' in request.path %} active {% endif %}"
-                       id="dropdown-resources" data-bs-toggle="dropdown"
-                       aria-expanded="false">Resources</a>
-                    <ul class="dropdown-menu" aria-labelledby="dropdown-resources">
-                        <li><a class="dropdown-item" href="{% url 'bibliography' %}">Publications using CTB Samples and
-                            Data</a></li>
-                        <li><a class="dropdown-item" href="{% url 'useful_links' %}">Useful External Links</a></li>
-                        <li><a class="dropdown-item" href="{% url 'podcasts_and_videos' %}">Useful Podcasts and
-                            Videos</a></li>
-                    </ul>
-                </li>
+{#                <li class="nav-item dropdown">#}
+{#                    <a class="nav-link dropdown-toggle {% if 'resources/' in request.path %} active {% endif %}"#}
+{#                       id="dropdown-resources" data-bs-toggle="dropdown"#}
+{#                       aria-expanded="false">Resources</a>#}
+{#                    <ul class="dropdown-menu" aria-labelledby="dropdown-resources">#}
+{#                        <li><a class="dropdown-item" href="{% url 'bibliography' %}">Publications using CTB Samples and#}
+{#                            Data</a></li>#}
+{#                        <li><a class="dropdown-item" href="{% url 'useful_links' %}">Useful External Links</a></li>#}
+{#                        <li><a class="dropdown-item" href="{% url 'podcasts_and_videos' %}">Useful Podcasts and#}
+{#                            Videos</a></li>#}
+{#                    </ul>#}
+{#                </li>#}
 
 
 
 
 
 
-                <li class="nav-item">
-                    <a class="nav-link {% if 'news' in request.path %} active {% endif %}" href="{% url 'latest_news' %}">Latest
-                        News</a>
-                </li>
+{#                <li class="nav-item">#}
+{#                    <a class="nav-link {% if 'news' in request.path %} active {% endif %}" href="{% url 'latest_news' %}">Latest#}
+{#                        News</a>#}
+{#                </li>#}
                 <li class="nav-item">
                     <a class="nav-link {% if 'contact/' in request.path %} active {% endif %}"
                        href="{% url 'contact' %}">Contact Us</a>
