--- a/templates/base.html
+++ b/templates/base.html
@@ -24,8 +24,8 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>{% block title %}Chernobyl Tissue Biobank{% endblock %}</title>
-    <meta name="description" content="{% block description %}Chernobyl Tissue Biobank{% endblock %}">
+    <title>{% block title %}Chernobyl Tissue Bank{% endblock %}</title>
+    <meta name="description" content="{% block description %}Chernobyl Tissue Bank{% endblock %}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     {% block extra_css_libs %}{% endblock %}
