--- a/templates/ctb/about_project.html
+++ b/templates/ctb/about_project.html
@@ -47,7 +47,7 @@
         priority must go to matters such as diagnosis, treatment of those affected, and prevention.</p>
     <p>However, providing to the needs of the patient is not compromised and it is important to ensure that information
         of value to the health of future generations is not lost. Although the post Chernobyl thyroid tumors are
-        associated with a particular aetiology, they may also provide clues to the pathogenesis and molecular biology of
+        associated with a particular etiology, they may also provide clues to the pathogenesis and molecular biology of
         thyroid carcinoma in general.</p>
 
 {% endblock %}
