--- a/templates/ctb/aims.html
+++ b/templates/ctb/aims.html
@@ -56,7 +56,7 @@
         necessary for a number of reasons. There is evidence that suggests that tumors following a short latency
         are likely to show a different molecular biological and pathological profile than those of a longer latency;
         this project will help to clarify this difference as the latent period since the accident increases. Thyroid
-        cancer is increasing world-wide and although most tumors do not have a defined radiation aetiology, it is
+        cancer is increasing world-wide and although most tumors do not have a defined radiation etiology, it is
         likely that the insights gained from studying the post Chernobyl tumors will provide information that could
         be of use for the diagnosis and treatment of thyroid cancer and of other cancers in general.</p>
     <p class="bodytext"><strong>What happens to the results of the research studies?&nbsp;</strong><br>Researchers
