--- a/templates/ctb/research_projects_2001_2009.html
+++ b/templates/ctb/research_projects_2001_2009.html
@@ -356,7 +356,7 @@
         influence of genetic variation on cancer risk following exposure to ionising radiation. This will be
         achieved by investigation of variation in the genes involved in the DNA repair pathways, in DNA
         derived from blood samples or normal tissue samples from patients with thyroid tumors of
-        radiation-associated and non-radiation-associated aetiology. There are two main justifications for
+        radiation-associated and non-radiation-associated etiology. There are two main justifications for
         such a study, first to identify SNPs which indicate possession of an at risk genotype, and secondly,
         to identify the genes in which genetic variation is a significant modulator of cancer risk. This has
         particular and wider relevance to the involvement of DNA repair-associated factors in the pathology
