cron job validation

--- a/templates/ctb/contact.html
+++ b/templates/ctb/contact.html
@@ -39,7 +39,7 @@
 
                         <div class="text-muted">Email: <a href="mailto:ctb-info@isb-cgc.org">ctb-info@isb-cgc.org</a>
                         </div>
-                        <div class="text-muted">Phone: <a href="tel:+44-203-311-7342">240-276-7150 </a>
+                        <div class="text-muted">Phone: 240-276-7150 </a>
                         </div>
                     </div>
                 </div>
