--- a/templates/ctb/landing.html
+++ b/templates/ctb/landing.html
@@ -25,10 +25,11 @@
 {% block page_name %}landing{% endblock %}
 {% block body_class %}landing{% endblock %}
 {% block content %}
+
     <div class="container text-center my-5">
 
         <div class="row pt-5">
-            <div class="col fs-5">
+            <div class="col pt-5 fs-5">
                 WELCOME TO
             </div>
         </div>
@@ -37,7 +38,7 @@
             Chernobyl Tissue Bank
             </div>
         </div>
-        <div class="row py-5 fs-4 justify-content-center">
+        <div class="row py-5 fs-3 justify-content-center">
             <div class="col-9">
                 <div>
                     The CTB is a research tissue bank that was established to collect, document, store, and issue to
@@ -67,7 +68,6 @@
 {#                Other things.#}
 {#            </div>#}
 {#        </div>#}
-    </div>
 {% endblock %}
 
 {% block js_file %}
