--- a/templates/base.html
+++ b/templates/base.html
@@ -48,7 +48,7 @@
     <script>
         var STATIC_FILES_URL = '{{ STATIC_FILES_URL }}';
         var BASE_URL = '{{ BASE_URL }}' || "";
-        var STORAGE_URI = '{{ STORAGE_URI }}';
+        {#var STORAGE_URI = '{{ STORAGE_URI }}';#}
     </script>
 
 </head>
