--- a/templates/donors/application_form.html
+++ b/templates/donors/application_form.html
@@ -12,128 +12,22 @@
 {% block page_name %}application_form{% endblock %}
 
 {% block content %}
-    <div class="container py-3">
-        <form method="POST" id="form-application" action="{% url 'application_submit' %}">
-            {% csrf_token %}
-            <div class="p-3 bg-light rounded-2">
-                <div class="py-3 px-5">
-                    <h4 class="mb-4 text-center my-2">INFORMATION FOR APPLICANTS FOR ACCESS TO MATERIALS AND/OR
-                        INFORMATION
-                        FROM THE CTB
-                    </h4>
-                    <div class="border border-secondary rounded-1 p-3 my-3">
-                        <h5>Instructions and requirements:</h5>
-                        <ul>
-                            <li>Please enter response to all sections of this application form clearly in English.</li>
-                            <li>Assessment of the project will be made only on the information supplied in this
-                                application.
-                            </li>
-                            <li>Additional information may be requested to approve this request. This information may
-                                include principal investigator’s CV and lists of recent grants and publications, a proof
-                                of IRB and/or scientific and ethical review approvals, and evidence that the facilities
-                                and support are available for the proposed work.
-                            </li>
-                            <li>If application is approved, a material and data transfer agreement (MDTA) must be
-                                executed prior to transferring and materials and data.
-                            </li>
-                        </ul>
-
-                    </div>
-                    <div class="py-4">
-                        <h5 class="mb-2 fw-bold">
-                            CONTACT DETAILS FOR PRINCIPAL INVESTIGATOR
-                        </h5>
-                        <div class="my-3 row g-3">
-                            <div class="col-md-4">
-                                <label for="first-name" class="form-label">First Name</label>
-                                <input type="text" class="form-control" id="first-name" name="first-name">
-                            </div>
-                            <div class="col-md-4">
-                                <label for="last-name" class="form-label">Last Name</label>
-                                <input type="text" class="form-control" id="last-name" name="last-name">
-                            </div>
-                            <div class="col-md-4">
-                                <label for="pi-title" class="form-label">Title</label>
-                                <input type="text" class="form-control" id="pi-title" name="pi-title">
-                            </div>
-                            <div class="col-12">
-                                <label for="institution" class="form-label">Institution</label>
-                                <input type="text" class="form-control" id="institution" name="institution">
-                            </div>
-                            <div class="col-12">
-                                <label for="address1" class="form-label">Mailing Address</label>
-                                <input type="text" class="form-control" id="address1" name="address1" placeholder="Address 1">
-                            </div>
-                            <div class="col-md-8">
-                                <input type="text" class="form-control" id="address2" name="address2" placeholder="Address 2">
-                            </div>
-                            <div class="col-md-4">
-{#                                <label for="inputZip" class="form-label">Post/Zip Code</label>#}
-                                <input type="text" class="form-control" id="zipcode" name="zipcode" placeholder="Post/Zip Code">
-                            </div>
-                            <div class="col-12">
-{#                                <label for="country" class="form-label">Country</label>#}
-                                <input type="text" class="form-control" id="country" name="country" placeholder="Country">
-                            </div>
-                            <div class="col-md-6">
-                                <label for="phone" class="form-label">Telephone</label>
-                                <input type="tel" class="form-control" id="phone" name="phone">
-                                <div class="fw-light text-muted fst-italic small">Include international dialing code</div>
-                            </div>
-                            <div class="col-md-6">
-                                <label for="email" class="form-label">E-mail</label>
-                                <input type="email" class="form-control" id="email" name="email">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="py-4">
-                        <h5 class="mb-2 fw-bold">
-                            PROJECT DESCRIPTION
-                        </h5>
-                        <div class="my-3">
-                            Please provide the title and a short summary (maximum 2 pages) of the proposed research on
-                            the samples you are requesting from the CTB. Sufficient information should be provided to
-                            enable the CTB to determine the scientific validity of your study. Please fully justify the
-                            number and type of samples requested and address ALL sections below.
-                        </div>
-                        <div class="my-3 row g-3">
-                            <div class="col-12">
-                                <label for="prj-title" class="form-label">Title</label>
-                                <input type="text" class="form-control" name="prj-title" id="research-title">
-                            </div>
-                            <div class="col-12">
-                                <label for="overview" class="form-label">Overview and rationale</label>
-                                <textarea type="textarea" class="form-control" name="overview" rows="4" cols="50" id="overview"></textarea>
-                            </div>
-                            <div class="col-12">
-                                <label for="aims" class="form-label">Aim(s) <span class="text-muted fw-light ms-3 small">Please clearly state the aim(s) of your project</span></label>
-                                <textarea type="textarea" class="form-control" name="aims" rows="4" cols="50" id="aims"></textarea>
-                            </div>
-                            <div class="col-12">
-                                <label for="experience" class="form-label">Experience of group carrying out analysis <span class="text-muted fw-light ms-3 small">Please provide information to indicate that your research group has experience in the techniques you intend to use, either by use of preliminary data from other work carried out in your group or by providing references to publications from your group that are relevant to this application</span></label>
-                                <textarea type="textarea" class="form-control" name="experience" rows="4" cols="50"
-                                          id="experience"></textarea>
-                            </div>
-                            <div class="col-12">
-                                <label for="methods" class="form-label">Methods <span
-                                        class="text-muted fw-light ms-3 small">Please detail the methods you intend to use, study design, analysis, planned publications and presentations, and data sharing plan</span></label>
-                                <textarea type="textarea" class="form-control" name="methods" rows="4" cols="50"
-                                          id="methods"></textarea>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="mb-4 text-center">
-                        <button type="submit" id="submit-btn" class="btn btn-primary col-md-2 mx-auto">Submit <i
-                                class="fa-solid fa-chevron-right"></i></button>
-                    </div>
+    <div class="container py-4">
+        <div class="p-3 my-3 bg-light rounded-2">
+            <form method="POST" id="form-application" action="{% url 'application_submit' %}">
+                {% csrf_token %}
+                {% include 'donors/intake_form.html' %}
+                <div class="mb-3 text-center">
+                    <button type="submit" id="submit-btn" class="btn btn-primary col-md-2 mx-auto">Submit <i
+                            class="fa-solid fa-chevron-right"></i></button>
                 </div>
-            </div>
-        </form>
+            </form>
+        </div>
     </div>
 
 {% endblock %}
 
-{#{% block js_file %}#}
-{#    {{ block.super }}#}
-{#    <script src="{% static 'js/application_form.js' %}"></script>#}
-{#{% endblock %}#}
+{% block js_file %}
+    {{ block.super }}
+    <script src="{% static 'js/application_form.js' %}"></script>
+{% endblock %}
