--- a/templates/donors/application_post_submit.html
+++ b/templates/donors/application_post_submit.html
@@ -13,19 +13,20 @@
 
 {% block content %}
     <div class="container py-3">
-        {% if main_message.success %}
+        {% if success %}
             <div class="p-3 mb-2 rounded-2 border border-2 border-success">
-                <i class="fa-solid fa-circle-check text-secondary"></i> {{ main_message.success }}
+                <i class="fa-solid fa-circle-check text-secondary"></i> {{ success }}
+            </div>
+            <div class="mt-4">
+                <a class="btn btn-primary" role="button" href="{% url 'dashboard' %}">Back to Dashboard</a>
             </div>
         {% endif %}
-        {% if main_message.error %}
+        {% if error %}
             <div class="p-3 mb-2 rounded-2 border border-2 border-warning">
-                <i class="fa-solid fa-circle-exclamation text-secondary"></i> {{ main_message.error }}
+                <i class="fa-solid fa-circle-exclamation text-secondary"></i> There was an error while submitting your application. Please try again or contact feedback@isb-cgc.org if you have any questions.
+                <div class="font-monospace text-muted bg-light rounded-2 p-2 mt-2 small">[ERROR] {{ error }}</div>
             </div>
         {% endif %}
-    <div>
-        <a class="btn btn-primary" role="button" href="{% url 'dashboard' %}">Back to Dashboard</a>
-    </div>
     </div>
 {% endblock %}
 
